# pytidyhtml5

./: .gitignore  .gitmodules  LICENSE.md  MANIFEST.in  Makefile  README.rst  _pytidyhtml5.pyx  basic-sanity-test.py  generate_imports.py  generate_imports_transclusion.h  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements-readthedocs.txt  requirements.readthedocs.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  ci.yml  codeql-analysis.yml  linux.yml
docs/: attr.rst  conf.py  document.rst  enums.rst  further.rst  index.rst  message.rst  message_args.rst  node.rst  option.rst
lib/: DESCRIPTION  VERSION  VERSION.txt  _allocator.pyx  _convenience.pyx  _enum_by_name.pyx  _fix-mingw32-w64s-cmath.h  _import_python.pyx  _import_tidy.pyx  _import_tidy_enum.pyx  _import_tidy_platform.pyx  _imports.pyx  _input_source.pyx  _input_ucs.pyx  _output_buffer.pyx  _output_sink.pyx  _tidy_attr.pyx  _tidy_document.pyx  _tidy_enum.pyx  _tidy_message.pyx  _tidy_node.pyx  _tidy_options.pyx  _version.pyx  native.hpp
lib/pytidyhtml5/: __init__.py  _doc.py
pytidyhtml5/: __init__.py  _doc.py
