[metadata]
# keep synchronous to requirements-readthedocs.txt
# keep synchronous to src/VERSION.inc
version = 2024.10.24

name = pytidyhtml5
description = HTML clean-up and repair: Statically linked Python interface for tidy-html5.
url = https://github.com/Kijewski/pytidyhtml5
project_urls =
    Code = https://github.com/Kijewski/pytidyhtml5
    Documentation = https://pytidyhtml5.readthedocs.io/
    Download = https://pypi.org/project/pytidyhtml5/
    Homepage = https://github.com/Kijewski/pytidyhtml5
    Tracker = https://github.com/Kijewski/pytidyhtml5/issues

author = René Kijewski
maintainer = René Kijewski
author_email = pypi.org@k6i.de
maintainer_email = pypi.org@k6i.de

long_description = file: README.rst
long_description_content_type = text/x-rst

license = Apache License 2.0
license_files = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Text Processing :: Markup :: HTML 

[options]
zip_safe = False

python_requires = ~= 3.6
setup_requires =
    Cython == 3.*
    setuptools

include_package_data = True
packages = pytidyhtml5
package_dir =
    = lib
